--- a/_html/pitch.html
+++ b/_html/pitch.html
@@ -6,10 +6,318 @@
 		<!-- wrap -->
 		<div class="wrap">
 			
-			<!-- build:section header -->
+			<!-- build:section headermenu -->
 			<!-- /build -->
 			
-			33333333
+			<!--main-pitch-head-box-->
+			<div class="main-pitch-head-box cnt-section">
+				<div class="inner-wrap">
+					<div class="title-inner-wrap">
+						<h1 class="h1-title title-large">This is Credits. <br><span class="title-gradient">Our crypto bank.</span></h1>
+						<h2 class="h4-title">Digital assets and banking <span class="title-dark">made easier</span> than we found it now. </h2>
+					</div>
+					<div class="photo-inner-wrap">
+						<div class="elm-photo">
+							<img src="./img/screen-pitch.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/main-pitch-head-box-->
+			
+			<!--main-bg-box-->
+			<div class="main-bg-box bg-gray cnt-section">
+				
+				<!--main-pitch-tiles-box-->
+				<div class="main-pitch-tiles-box cnt-section no-ptop no-pbottom">
+					<div class="inner-wrap">
+						<div class="main-title-wrap">
+							<h2 class="h3-title">Now, there are three major problems in the crypto world.  </h2>
+						</div>
+						<div class="items-wrap">
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-pitch text-body-small">
+									<div class="tile-title-wrap">
+										<div class="tile-subtitle title-gradient">Problem</div>
+									</div>
+									<div class="tile-info-wrap">
+										<div class="tile-title h4-title">1. Low security.</div>
+										<p>Customers are vulnerable to losing their money (like with FTX). Crypto-exchanges & wallets have access to customers money, working in unlicensed & non-compliant locations.</p>
+									</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-pitch text-body-small">
+									<div class="tile-title-wrap">
+										<div class="tile-subtitle title-gradient">Credits’ solution</div>
+									</div>
+									<div class="tile-info-wrap info-left">
+										<div class="tile-title h4-title title-red">Compliance First.</div>
+										<p>Credits holds all funds on separate accounts on individual banking IBAN accounts, just like a bank.</p>
+									</div>
+									<div class="tile-action-wrap">
+										<a href="" class="btn button-large">Join Pre-STO whitelist</a>
+									</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-pitch-second text-body-small">
+									<div class="tile-title-wrap">
+										<div class="tile-subtitle title-gradient">Problem</div>
+									</div>
+									<div class="tile-info-wrap">
+										<div class="tile-title h4-title title-red">2. Users can’t pay or send money.</div>
+									</div>
+									<div class="tile-subinfo-wrap">
+										<div class="tile-photo">
+											<img src="./img/prt-icons.png" alt="">
+										</div>
+										<p>Crypto-exchanges and wallets do not provide the ability to transfer, receive or pay money to everyone.</p>
+									</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-pitch-second text-body-small">
+									<div class="tile-title-wrap">
+										<div class="tile-subtitle">Credits’ solution</div>
+									</div>
+									<div class="tile-info-wrap">
+										<div class="tile-title h4-title title-red">Credits gives full payment services</div>
+									</div>
+									<div class="tile-subinfo-wrap">
+										<p>It is a fully fledged wallet or Digital bank. Customers can send and accept money from/to anyone.</p>
+									</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-pitch text-body-small">
+									<div class="tile-title-wrap">
+										<div class="tile-subtitle title-gradient">Problem</div>
+									</div>
+									<div class="tile-info-wrap">
+										<div class="tile-title h4-title">3. Crypto is still very difficult.</div>
+										<p>High overall costs of up to 10% for buying and selling crypto. It can take up to weeks to deposit and/or withdraw.</p>
+									</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-pitch text-body-small">
+									<div class="tile-title-wrap">
+										<div class="tile-subtitle title-gradient">Credits’ solution</div>
+									</div>
+									<div class="tile-info-wrap info-left">
+										<div class="tile-title h4-title title-red">Credits bridges banking with&nbsp;crypto.</div>
+										<p>By bypassing intermediaries inside a&nbsp;single Platform, Credits makes the transfer from crypto to fiat easier.</p>
+									</div>
+									<div class="tile-action-wrap">
+										<a href="" class="btn button-large">Join Pre-STO whitelist</a>
+									</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+							<!--item wrap-->
+							<div class="item-wrap wrap-full">
+								<div class="item-tile-pitch-full text-body-small">
+									<div class="tile-title-wrap">
+										<div class="tile-subtitle title-gradient">The Solution for these problems</div>
+										<div class="tile-title h4-title title-red">Bank and crypto in&nbsp;the same App!</div>
+										<ul>
+											<li>20+ Bank accounts for saving money</li>
+											<li>Debit cards and payments</li>
+											<li>Buy, sell, save and exchange cryptocurrency</li>
+											<li>Invest in top companies worldwide</li>
+										</ul>
+										<a href="" class="btn button-large">Join Pre-STO whitelist</a>
+									</div>
+									<div class="tile-photo-wrap">
+										<div class="tile-photo">
+											<img src="./img/pitch-tiles.png" alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+						</div>
+					</div>
+				</div>
+				<!--/main-pitch-tiles-box-->
+				
+			</div>
+			<!--/main-bg-box-->
+			
+			33333
+			
+			<!--main-questions-box-->
+			<div class="main-questions-box cnt-box">
+				<div class="inner-wrap">
+					<div class="main-title-wrap text-body">
+						<h4 class="h4-title">Questions and Answers about STO</h4>
+					</div>
+					<div class="items-wrap">
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-question js-popup-wrap no-close">
+								<a href="" class="btn-popup js-btn-toggle">What is Credits’ STO?</a>
+								<div class="popup-content-block js-popup-block">
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-question js-popup-wrap no-close">
+								<a href="" class="btn-popup js-btn-toggle active">What is an STO token?</a>
+								<div class="popup-content-block js-popup-block">
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-question js-popup-wrap no-close">
+								<a href="" class="btn-popup js-btn-toggle">What is the difference between an STO token and a crypto utility token?</a>
+								<div class="popup-content-block js-popup-block">
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-question js-popup-wrap no-close">
+								<a href="" class="btn-popup js-btn-toggle">How to become an investor?</a>
+								<div class="popup-content-block js-popup-block">
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-question js-popup-wrap no-close">
+								<a href="" class="btn-popup js-btn-toggle">Whose citizens can participate?</a>
+								<div class="popup-content-block js-popup-block">
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-question js-popup-wrap no-close">
+								<a href="" class="btn-popup js-btn-toggle">How can you make money on an STO?</a>
+								<div class="popup-content-block js-popup-block">
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-question js-popup-wrap no-close">
+								<a href="" class="btn-popup js-btn-toggle">What are the payment methods?</a>
+								<div class="popup-content-block js-popup-block">
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-question js-popup-wrap no-close">
+								<a href="" class="btn-popup js-btn-toggle">How can I sell tokens in the future? What is the secondary market for them?</a>
+								<div class="popup-content-block js-popup-block">
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+					</div>
+				</div>
+			</div>
+			<!--/main-questions-box-->
+			
+			<!--main-menu-box-->
+			<div class="main-menu-box cnt-section">
+				<div class="inner-wrap">
+					<div class="main-title-wrap text-body">
+						<h4 class="h4-title title-gradient">Find out more</h4>
+						<p> Take part in the allotment of shares.</p>
+					</div>
+					<ul class="menu">
+						<li>
+							<a href="" class="btn-menu active">
+					<span class="button-ico">
+						<img src="./img/icons/menu01.svg" alt="">
+					</span>
+								<span class="button-title">Overview</span>
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-menu">
+					<span class="button-ico">
+						<img src="./img/icons/menu02.svg" alt="">
+					</span>
+								<span class="button-title">Pitch</span>
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-menu">
+					<span class="button-ico">
+						<img src="./img/icons/menu03.svg" alt="">
+					</span>
+								<span class="button-title">Product</span>
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-menu">
+					<span class="button-ico">
+						<img src="./img/icons/menu04.svg" alt="">
+					</span>
+								<span class="button-title">Road map</span>
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-menu">
+					<span class="button-ico">
+						<img src="./img/icons/menu05.svg" alt="">
+					</span>
+								<span class="button-title">Partnerships</span>
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-menu">
+					<span class="button-ico">
+						<img src="./img/icons/menu06.svg" alt="">
+					</span>
+								<span class="button-title">STO</span>
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-menu">
+					<span class="button-ico">
+						<img src="./img/icons/menu07.svg" alt="">
+					</span>
+								<span class="button-title">Bounty. Airdrop</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<!--/main-menu-box-->
 			
 			<!-- build:section footer -->
 			<!-- /build -->
