--- a/partnerships.html
+++ b/partnerships.html
@@ -344,7 +344,20 @@
                     <div class="items-wrap">
                         <!--item wrap-->
                         <div class="item-wrap">
-                            333333
+                            <div class="item-tile-prt-four text-body-small">
+                                <div class="tile-title-wrap">
+                                    <div class="tile-subtitle h6-title">Service</div>
+                                    <div class="tile-title h5-title">Investment and stock trading in Credits’ App</div>
+                                </div>
+                                <div class="tile-photos-wrap">
+                                    <div class="tile-photo">
+                                        <img src="./img/prt-icons.png" alt="">
+                                    </div>
+                                    <div class="tile-photo">
+                                        <img src="./img/prt-screen.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <!--/item wrap-->
                         <!--item wrap-->
@@ -377,7 +390,70 @@
                     <div class="items-wrap">
                         <!--item wrap-->
                         <div class="item-wrap">
-                            333333
+                            <div class="item-tile-logo-text text-body-small">
+                                <div class="tile-title-wrap">
+                                    <div class="tile-title h6-title">Payments</div>
+                                </div>
+                                <div class="tile-photo-wrap">
+                                    <div class="tile-photo photo-contain">
+                                        <img src="./img/l05.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="tile-text-wrap">
+                                    <p>Credits is a PayPay partner for providing fast and convenient payments.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                        <!--item wrap-->
+                        <div class="item-wrap">
+                            <div class="item-tile-logo-text text-body-small">
+                                <div class="tile-title-wrap">
+                                    <div class="tile-title h6-title">Acquiring, payments</div>
+                                </div>
+                                <div class="tile-photo-wrap">
+                                    <div class="tile-photo photo-contain">
+                                        <img src="./img/l06.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="tile-text-wrap">
+                                    <p>Credits partner for cryptocurrency acquisition and IBAN accounts.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                        <!--item wrap-->
+                        <div class="item-wrap">
+                            <div class="item-tile-logo-text text-body-small">
+                                <div class="tile-title-wrap">
+                                    <div class="tile-title h6-title">Payments</div>
+                                </div>
+                                <div class="tile-photo-wrap">
+                                    <div class="tile-photo photo-contain">
+                                        <img src="./img/l07.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="tile-text-wrap">
+                                    <p>Credits is a Partner for payment solutions using worldwide cashless payments.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                        <!--item wrap-->
+                        <div class="item-wrap">
+                            <div class="item-tile-logo-text text-body-small">
+                                <div class="tile-title-wrap">
+                                    <div class="tile-title h6-title">Payments</div>
+                                </div>
+                                <div class="tile-photo-wrap">
+                                    <div class="tile-photo photo-contain">
+                                        <img src="./img/l08.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="tile-text-wrap">
+                                    <p>Credits is a Partner for payment solutions for European customers.</p>
+                                </div>
+                            </div>
                         </div>
                         <!--/item wrap-->
                     </div>
@@ -393,7 +469,45 @@
                     <div class="items-wrap">
                         <!--item wrap-->
                         <div class="item-wrap">
-                            333333
+                            <div class="item-tile-crypto">
+                                <div class="tile-title-wrap">
+                                    <div class="tile-subtitle h6-title">Crypto services</div>
+                                    <div class="tile-title h4-title">Transfers, exchange, purchases etc.</div>
+                                </div>
+                                <div class="tile-photo-wrap">
+                                    <div class="tile-photo">
+                                        <img src="./img/cr-screen.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                        <!--item wrap-->
+                        <div class="item-wrap">
+                            <div class="item-tile-logos">
+                                <div class="tile-title-wrap">
+                                    <div class="tile-title h6-title">Partners</div>
+                                </div>
+                                <div class="tile-photo-wrap">
+                                    <div class="tile-photo">
+                                        <img src="./img/l09.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                        <!--item wrap-->
+                        <div class="item-wrap">
+                            <div class="item-tile-logos">
+                                <div class="tile-title-wrap">
+                                    <div class="tile-title h6-title">Partners</div>
+                                </div>
+                                <div class="tile-photo-wrap">
+                                    <div class="tile-photo">
+                                        <img src="./img/l10.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <!--/item wrap-->
                     </div>
