--- a/_html/index.html
+++ b/_html/index.html
@@ -18,8 +18,9 @@
 					<li><a href="about.html">About</a></li>
 					<li><a href="payments.html">Payments</a></li>
 					<li><a href="cards.html">Cards</a></li>
-					<li><a href="iban.html">new IBAN --в работе</a></li>
+					<li><a href="iban.html">new IBAN</a></li>
 					<li>___OLD PAGES___</li>
+					<li><a href="help-main.html">Help main</a></li>
 					<li><a href="help.html">Help</a></li>
 					<li><a href="legal.html">Legal</a></li>
 					<li><a href="news.html">News</a></li>
@@ -31,7 +32,7 @@
 					<li><a href="roadmap.html">Roadmap</a></li>
 					<li><a href="products.html">Products</a></li>
 					<li><a href="pitch.html">Pitch --в работе</a></li>
-					<li><a href="partnerships.html">Partnerships --в работе</a></li>
+					<li><a href="partnerships.html">Partnerships</a></li>
 					<li><a href="overview.html">Overview</a></li>
 					<li><a href="bounty.html">Bounty</a></li>
 					<li><a href="ld.html">Landing</a></li>
